Refactor index.html for cleaner formatting
Removed extra HTML tags and strong formatting from the profile description.

--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
 
 <body>
   <header>
-    <h1>Abdelmageed Ahmed Babiker Ahmed</h1>
+    <h1>Abdelmageed Ahmed Babiker </h1>
     <p>HSE Supervisor | Mining Operations Specialist</p>
   </header>
 
@@ -216,7 +216,7 @@
       <h2><i class="fas fa-user"></i> Profile</h2>
       <div class="section">
         <p>
-          Motivated and detail-oriented <strong>HSE Supervisor</strong> with over <strong>1.5 years of experience</strong> in mining operations. Proven ability to implement safety policies, conduct rigorous <strong>risk assessments</strong>, deliver impactful <strong>Toolbox Talks</strong>, and ensure strict compliance with environmental and occupational health standards.
+          Motivated and detail-oriented HSE Supervisor with over 1.5 years of experience in mining operations. Proven ability to implement safety policies, conduct rigorous risk assessments, deliver impactful Toolbox Talks and ensure strict compliance with environmental and occupational health standards.
         </p>
       </div>
     </div>
@@ -254,13 +254,13 @@
         <p>Red Rock Mining</p>
         <p class="muted">Nile River State, Sudan | June 2024 – Present</p>
         <ul>
-          <li>Conducted daily <strong>Toolbox Talks</strong> and thorough site safety inspections.</li>
-          <li>Ensured strict compliance with company policies and legal <strong>HSE requirements</strong>.</li>
+          <li>Conducted daily Toolbox Talks and thorough site safety inspections.</li>
+          <li>Ensured strict compliance with company policies and legal HSE requirements.</li>
           <li>Led incident investigations and developed corrective actions.</li>
           <li>Supervised risk control measures and managed Permit-to-Work procedures.</li>
           <li>Delivered safety training to site personnel.</li>
           <li>Monitored waste handling, maintaining environmental compliance.</li>
-          <li>Prepared monthly <strong>HSE reports</strong> and KPI analysis.</li>
+          <li>Prepared monthly HSE reports and KPI analysis.</li>
         </ul>
       </div>
     </div>
@@ -305,4 +305,4 @@
     &copy; 2025 Abdelmageed Ahmed. All rights reserved.
   </footer>
 </body>
-</html>
+            </html>
