--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 <head>
@@ -79,18 +80,51 @@
       opacity: 0.1;
     }
 
+    .profile-header {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 1.5rem;
+      position: relative;
+      z-index: 2;
+    }
+
+    .profile-image-container {
+      width: 180px;
+      height: 180px;
+      border-radius: 50%;
+      overflow: hidden;
+      border: 4px solid rgba(255, 255, 255, 0.3);
+      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2);
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+    }
+
+    .profile-image-container:hover {
+      transform: scale(1.05);
+      box-shadow: 0 12px 25px rgba(0, 0, 0, 0.3);
+    }
+
+    .profile-image {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      background-color: #e5e7eb; /* لون خلفية مؤقت للصورة */
+    }
+
+    .profile-text {
+      text-align: center;
+    }
+
     header h1 {
       font-size: 2.5rem;
       font-weight: 700;
       margin-bottom: 0.5rem;
-      position: relative;
     }
 
     header p {
       font-size: 1.3rem;
       font-weight: 400;
       opacity: 0.9;
-      position: relative;
     }
 
     .section-card {
@@ -287,6 +321,11 @@
         padding: 2rem 1rem;
       }
 
+      .profile-image-container {
+        width: 150px;
+        height: 150px;
+      }
+
       header h1 {
         font-size: 2rem;
       }
@@ -317,6 +356,11 @@
         font-size: 14px;
       }
 
+      .profile-image-container {
+        width: 130px;
+        height: 130px;
+      }
+
       header h1 {
         font-size: 1.8rem;
       }
@@ -342,8 +386,16 @@
   </div>
 
   <header>
-    <h1>Abdelmageed Ahmed Babiker</h1>
-    <p>HSE Supervisor | Mining Operations Specialist</p>
+    <div class="profile-header">
+      <div class="profile-image-container">
+        <!-- استبدل src بالمسار الصحيح لصورتك -->
+        <img src="https://github.com/AbdelmageedIzzat/AbdelmageedIzzat.github.io/blob/main/IMG_20250929_110535~3.jpg" alt="Abdelmageed Ahmed" class="profile-image" />
+      </div>
+      <div class="profile-text">
+        <h1>Abdelmageed Ahmed Babiker</h1>
+        <p>HSE Supervisor | Mining Operations Specialist</p>
+      </div>
+    </div>
   </header>
 
   <div class="container">
