Change profile image source to relative path
Updated profile image source to a relative path.

--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@
     <div class="profile-header">
       <div class="profile-image-container">
         <!-- استبدل src بالمسار الصحيح لصورتك -->
-        <img src="https://github.com/AbdelmageedIzzat/AbdelmageedIzzat.github.io/blob/main/IMG_20250929_110535~3.jpg" alt="Abdelmageed Ahmed" class="profile-image" />
+        <img src="IMG_20250929_110535~3.jpg" alt="Abdelmageed Ahmed" class="profile-image" />
       </div>
       <div class="profile-text">
         <h1>Abdelmageed Ahmed Babiker</h1>
