--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 <head>
@@ -90,107 +89,114 @@
     }
 
     .profile-image-container {
-      width: 180px;
-      height: 180px;
+      width: 220px;
+      height: 220px;
       border-radius: 50%;
       overflow: hidden;
-      border: 4px solid rgba(255, 255, 255, 0.3);
-      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2);
-      transition: transform 0.3s ease, box-shadow 0.3s ease;
+      border: 5px solid rgba(255, 255, 255, 0.4);
+      box-shadow: 0 10px 25px rgba(0, 0, 0, 0.2);
+      transition: transform 0.4s ease, box-shadow 0.4s ease;
+      background-color: rgba(255, 255, 255, 0.1);
+      display: flex;
+      align-items: center;
+      justify-content: center;
     }
 
     .profile-image-container:hover {
-      transform: scale(1.05);
-      box-shadow: 0 12px 25px rgba(0, 0, 0, 0.3);
+      transform: scale(1.08);
+      box-shadow: 0 15px 30px rgba(0, 0, 0, 0.3);
     }
 
     .profile-image {
       width: 100%;
       height: 100%;
       object-fit: cover;
-      background-color: #e5e7eb; /* لون خلفية مؤقت للصورة */
+      display: block;
     }
 
     .profile-text {
       text-align: center;
+      max-width: 700px;
     }
 
     header h1 {
-      font-size: 2.5rem;
+      font-size: 2.8rem;
       font-weight: 700;
       margin-bottom: 0.5rem;
+      text-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     }
 
     header p {
-      font-size: 1.3rem;
+      font-size: 1.5rem;
       font-weight: 400;
-      opacity: 0.9;
+      opacity: 0.95;
+      margin-bottom: 0.5rem;
     }
 
     .section-card {
       background: var(--card-bg);
-      border-radius: 12px;
-      padding: 1.8rem;
-      margin-bottom: 1.5rem;
+      border-radius: 16px;
+      padding: 2rem;
+      margin-bottom: 1.8rem;
       box-shadow: var(--shadow-md);
       border: 1px solid var(--border-color);
       transition: transform 0.3s ease, box-shadow 0.3s ease;
     }
 
     .section-card:hover {
-      transform: translateY(-5px);
+      transform: translateY(-7px);
       box-shadow: var(--shadow-lg);
     }
 
     h2 {
-      font-size: 1.4rem;
+      font-size: 1.5rem;
       color: var(--primary-color);
-      margin-bottom: 1.2rem;
+      margin-bottom: 1.5rem;
       font-weight: 600;
       display: flex;
       align-items: center;
-      gap: 10px;
-      padding-bottom: 0.5rem;
+      gap: 12px;
+      padding-bottom: 0.8rem;
       border-bottom: 2px solid var(--border-color);
     }
 
     h2 i {
-      font-size: 1.2rem;
-      width: 30px;
+      font-size: 1.3rem;
+      width: 32px;
       text-align: center;
     }
 
     .section p {
-      font-size: 1rem;
-      margin-bottom: 1rem;
+      font-size: 1.05rem;
+      margin-bottom: 1.2rem;
     }
 
     .section strong {
       font-weight: 600;
       color: var(--text-primary);
-      font-size: 1.1rem;
-      margin: 1rem 0 0.5rem 0;
+      font-size: 1.15rem;
+      margin: 1.2rem 0 0.6rem 0;
       display: block;
     }
 
     .muted {
       color: var(--text-secondary);
-      font-size: 0.9rem;
-      margin-bottom: 1rem;
+      font-size: 0.95rem;
+      margin-bottom: 1.2rem;
       font-style: italic;
     }
 
     ul {
       list-style: none;
       padding-left: 0;
-      font-size: 1rem;
+      font-size: 1.05rem;
     }
 
     ul li {
       position: relative;
-      padding-left: 1.5rem;
-      margin-bottom: 0.8rem;
-      line-height: 1.6;
+      padding-left: 1.8rem;
+      margin-bottom: 1rem;
+      line-height: 1.7;
     }
 
     ul li::before {
@@ -199,7 +205,7 @@
       left: 0;
       color: var(--primary-color);
       font-weight: bold;
-      font-size: 1.2rem;
+      font-size: 1.3rem;
       line-height: 1;
     }
 
@@ -217,66 +223,68 @@
 
     .contact-grid {
       display: grid;
-      grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-      gap: 15px;
+      grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
+      gap: 18px;
     }
 
     .contact-item {
       display: flex;
       align-items: center;
-      gap: 12px;
-      font-size: 1rem;
-      padding: 8px 0;
+      gap: 15px;
+      font-size: 1.05rem;
+      padding: 10px 0;
     }
 
     .contact-item i {
       color: var(--primary-color);
-      min-width: 24px;
+      min-width: 28px;
       text-align: center;
-      font-size: 1.2rem;
+      font-size: 1.3rem;
     }
 
     .skills-grid {
       display: flex;
       flex-wrap: wrap;
-      gap: 12px;
-      font-size: 0.9rem;
-      margin-top: 10px;
+      gap: 14px;
+      font-size: 0.95rem;
+      margin-top: 12px;
     }
 
     .skill-tag {
       background: var(--primary-color);
       color: white;
-      padding: 8px 16px;
-      border-radius: 20px;
+      padding: 10px 18px;
+      border-radius: 25px;
       font-weight: 500;
       transition: all 0.3s ease;
+      box-shadow: var(--shadow-sm);
     }
 
     .skill-tag:hover {
       background: var(--primary-dark);
-      transform: scale(1.05);
+      transform: translateY(-3px);
+      box-shadow: var(--shadow-md);
     }
 
     footer {
       text-align: center;
       margin-top: 3rem;
-      font-size: 0.9rem;
+      font-size: 0.95rem;
       color: var(--text-secondary);
       border-top: 1px solid var(--border-color);
-      padding: 1.5rem 10px;
+      padding: 2rem 10px;
       background: var(--card-bg);
     }
 
     .theme-toggle {
       position: fixed;
-      top: 20px;
-      right: 20px;
+      top: 25px;
+      right: 25px;
       background: var(--card-bg);
       border: 1px solid var(--border-color);
       border-radius: 50%;
-      width: 50px;
-      height: 50px;
+      width: 55px;
+      height: 55px;
       display: flex;
       align-items: center;
       justify-content: center;
@@ -287,11 +295,11 @@
     }
 
     .theme-toggle:hover {
-      transform: rotate(15deg);
+      transform: rotate(15deg) scale(1.1);
     }
 
     .theme-toggle i {
-      font-size: 1.2rem;
+      font-size: 1.3rem;
       color: var(--primary-color);
     }
 
@@ -318,20 +326,20 @@
       }
 
       header {
-        padding: 2rem 1rem;
+        padding: 2.5rem 1rem;
       }
 
       .profile-image-container {
-        width: 150px;
-        height: 150px;
+        width: 180px;
+        height: 180px;
       }
 
       header h1 {
-        font-size: 2rem;
+        font-size: 2.2rem;
       }
 
       header p {
-        font-size: 1.1rem;
+        font-size: 1.3rem;
       }
 
       .container {
@@ -339,11 +347,11 @@
       }
 
       .section-card {
-        padding: 1.5rem;
+        padding: 1.8rem;
       }
 
       h2 {
-        font-size: 1.3rem;
+        font-size: 1.4rem;
       }
 
       .contact-grid {
@@ -357,24 +365,24 @@
       }
 
       .profile-image-container {
-        width: 130px;
-        height: 130px;
+        width: 160px;
+        height: 160px;
       }
 
       header h1 {
-        font-size: 1.8rem;
+        font-size: 2rem;
       }
 
       header p {
-        font-size: 1rem;
+        font-size: 1.1rem;
       }
 
       .section-card {
-        padding: 1.2rem;
+        padding: 1.5rem;
       }
 
       h2 {
-        font-size: 1.2rem;
+        font-size: 1.3rem;
       }
     }
   </style>
