Update profile image source path in index.html

--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@
     <div class="profile-header">
       <div class="profile-image-container">
         <!-- استبدل src بالمسار الصحيح لصورتك -->
-        <img src="IMG_20250929_110535~3.jpg" alt="Abdelmageed Ahmed" class="profile-image" />
+        <img src="pictures/IMG_20250929_110535~4.jpg" alt="Abdelmageed Ahmed" class="profile-image" />
       </div>
       <div class="profile-text">
         <h1>Abdelmageed Ahmed Babiker</h1>
