Refactor CSS variables and improve layout styles
Removed unused CSS variables and adjusted styles for better layout and readability. Updated profile section titles and reduced padding and margins for a cleaner look.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
       --primary-color: #0D9488;
       --primary-dark: #095c53;
       --primary-light: #14B8A6;
-      --accent-color: #F59E0B;
       --text-primary: #111827;
       --text-secondary: #6B7280;
       --background: #FFFFFF;
@@ -21,14 +20,12 @@
       --shadow-md: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
       --shadow-lg: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
       --gradient: linear-gradient(135deg, #0D9488 0%, #14B8A6 100%);
-      --accent-gradient: linear-gradient(135deg, #F59E0B 0%, #D97706 100%);
     }
 
     [data-theme="dark"] {
       --primary-color: #14B8A6;
       --primary-dark: #0D9488;
       --primary-light: #2DD4BF;
-      --accent-color: #FBBF24;
       --text-primary: #F9FAFB;
       --text-secondary: #D1D5DB;
       --background: #0F172A;
@@ -50,13 +47,13 @@
       background: var(--background);
       color: var(--text-primary);
       line-height: 1.6;
-      font-size: 16px;
+      font-size: 15px;
       padding: 0;
       transition: background 0.3s, color 0.3s;
     }
 
     .container {
-      max-width: 1100px;
+      max-width: 900px;
       margin: 0 auto;
       padding: 0 20px;
     }
@@ -64,12 +61,11 @@
     header {
       background: var(--gradient);
       color: white;
-      padding: 4rem 1rem 3rem;
+      padding: 3rem 1rem;
       text-align: center;
       margin-bottom: 2rem;
       position: relative;
       overflow: hidden;
-      box-shadow: var(--shadow-lg);
     }
 
     header::before {
@@ -87,7 +83,7 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      gap: 1.8rem;
+      gap: 1.5rem;
       position: relative;
       z-index: 2;
     }
@@ -104,30 +100,6 @@
       display: flex;
       align-items: center;
       justify-content: center;
-      position: relative;
-    }
-
-    .profile-image-container::after {
-      content: "";
-      position: absolute;
-      top: -5px;
-      left: -5px;
-      right: -5px;
-      bottom: -5px;
-      border-radius: 50%;
-      border: 2px solid rgba(255, 255, 255, 0.6);
-      animation: pulse 2s infinite;
-    }
-
-    @keyframes pulse {
-      0% {
-        transform: scale(1);
-        opacity: 1;
-      }
-      100% {
-        transform: scale(1.1);
-        opacity: 0;
-      }
     }
 
     .profile-image-container:hover {
@@ -148,104 +120,83 @@
     }
 
     header h1 {
-      font-size: 2.8rem;
+      font-size: 2.5rem;
       font-weight: 700;
       margin-bottom: 0.5rem;
       text-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     }
 
     header p {
-      font-size: 1.5rem;
+      font-size: 1.3rem;
       font-weight: 400;
       opacity: 0.95;
-      margin-bottom: 1rem;
-    }
-
-    .tagline {
-      font-size: 1.1rem;
-      font-weight: 300;
-      max-width: 600px;
-      margin: 0 auto;
-      opacity: 0.9;
+      margin-bottom: 0.5rem;
     }
 
     .section-card {
       background: var(--card-bg);
-      border-radius: 16px;
-      padding: 2.2rem;
-      margin-bottom: 1.8rem;
+      border-radius: 12px;
+      padding: 1.8rem;
+      margin-bottom: 1.5rem;
       box-shadow: var(--shadow-md);
       border: 1px solid var(--border-color);
       transition: transform 0.3s ease, box-shadow 0.3s ease;
-      position: relative;
-      overflow: hidden;
-    }
-
-    .section-card::before {
-      content: "";
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 5px;
-      height: 100%;
-      background: var(--accent-gradient);
-      opacity: 0.8;
     }
 
     .section-card:hover {
-      transform: translateY(-7px);
+      transform: translateY(-5px);
       box-shadow: var(--shadow-lg);
     }
 
     h2 {
-      font-size: 1.5rem;
+      font-size: 1.3rem;
       color: var(--primary-color);
-      margin-bottom: 1.5rem;
+      margin-bottom: 1.2rem;
       font-weight: 600;
       display: flex;
       align-items: center;
-      gap: 12px;
+      gap: 10px;
       padding-bottom: 0.8rem;
-      border-bottom: 2px solid var(--border-color);
+      border-bottom: 1px solid var(--border-color);
     }
 
     h2 i {
-      font-size: 1.3rem;
-      width: 32px;
+      font-size: 1.1rem;
+      width: 24px;
       text-align: center;
     }
 
     .section p {
-      font-size: 1.05rem;
-      margin-bottom: 1.2rem;
+      font-size: 0.95rem;
+      margin-bottom: 1rem;
     }
 
     .section strong {
       font-weight: 600;
       color: var(--text-primary);
-      font-size: 1.15rem;
-      margin: 1.2rem 0 0.6rem 0;
+      font-size: 1rem;
+      margin: 1rem 0 0.5rem 0;
       display: block;
     }
 
     .muted {
       color: var(--text-secondary);
-      font-size: 0.95rem;
-      margin-bottom: 1.2rem;
+      font-size: 0.85rem;
+      margin-bottom: 1rem;
       font-style: italic;
     }
 
     ul {
       list-style: none;
       padding-left: 0;
-      font-size: 1.05rem;
+      font-size: 0.95rem;
     }
 
     ul li {
       position: relative;
-      padding-left: 1.8rem;
-      margin-bottom: 1rem;
-      line-height: 1.7;
+      padding-left: 1.5rem;
+      margin-bottom: 0.8rem;
+      line-height: 1.6;
     }
 
     ul li::before {
@@ -254,7 +205,7 @@
       left: 0;
       color: var(--primary-color);
       font-weight: bold;
-      font-size: 1.3rem;
+      font-size: 1.1rem;
       line-height: 1;
     }
 
@@ -272,90 +223,68 @@
 
     .contact-grid {
       display: grid;
-      grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
-      gap: 18px;
+      grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+      gap: 15px;
     }
 
     .contact-item {
       display: flex;
       align-items: center;
-      gap: 15px;
-      font-size: 1.05rem;
-      padding: 10px 0;
-      transition: transform 0.2s ease;
-    }
-
-    .contact-item:hover {
-      transform: translateX(5px);
+      gap: 12px;
+      font-size: 0.95rem;
+      padding: 8px 0;
     }
 
     .contact-item i {
       color: var(--primary-color);
-      min-width: 28px;
+      min-width: 20px;
       text-align: center;
-      font-size: 1.3rem;
+      font-size: 1rem;
     }
 
     .skills-grid {
       display: flex;
       flex-wrap: wrap;
-      gap: 14px;
-      font-size: 0.95rem;
-      margin-top: 12px;
+      gap: 10px;
+      font-size: 0.85rem;
+      margin-top: 10px;
     }
 
     .skill-tag {
       background: var(--primary-color);
       color: white;
-      padding: 10px 18px;
-      border-radius: 25px;
+      padding: 8px 14px;
+      border-radius: 20px;
       font-weight: 500;
       transition: all 0.3s ease;
       box-shadow: var(--shadow-sm);
-      position: relative;
-      overflow: hidden;
-    }
-
-    .skill-tag::before {
-      content: "";
-      position: absolute;
-      top: 0;
-      left: -100%;
-      width: 100%;
-      height: 100%;
-      background: linear-gradient(90deg, transparent, rgba(255,255,255,0.3), transparent);
-      transition: left 0.5s;
     }
 
     .skill-tag:hover {
       background: var(--primary-dark);
-      transform: translateY(-3px);
+      transform: translateY(-2px);
       box-shadow: var(--shadow-md);
-    }
-
-    .skill-tag:hover::before {
-      left: 100%;
     }
 
     footer {
       text-align: center;
       margin-top: 3rem;
-      font-size: 0.95rem;
+      font-size: 0.85rem;
       color: var(--text-secondary);
       border-top: 1px solid var(--border-color);
-      padding: 2rem 10px;
+      padding: 1.5rem 10px;
       background: var(--card-bg);
     }
 
     .theme-toggle {
       position: fixed;
-      top: 25px;
-      right: 25px;
+      top: 20px;
+      right: 20px;
       background: var(--card-bg);
       border: 1px solid var(--border-color);
       border-radius: 50%;
-      width: 55px;
-      height: 55px;
+      width: 45px;
+      height: 45px;
       display: flex;
       align-items: center;
       justify-content: center;
@@ -370,36 +299,8 @@
     }
 
     .theme-toggle i {
-      font-size: 1.3rem;
+      font-size: 1.1rem;
       color: var(--primary-color);
-    }
-
-    .badge {
-      display: inline-block;
-      background: var(--accent-gradient);
-      color: white;
-      padding: 5px 12px;
-      border-radius: 20px;
-      font-size: 0.8rem;
-      font-weight: 600;
-      margin-left: 10px;
-      vertical-align: middle;
-    }
-
-    .progress-bar {
-      height: 8px;
-      background: var(--border-color);
-      border-radius: 4px;
-      margin: 10px 0;
-      overflow: hidden;
-    }
-
-    .progress {
-      height: 100%;
-      background: var(--accent-gradient);
-      border-radius: 4px;
-      width: 0;
-      transition: width 1.5s ease-in-out;
     }
 
     /* Print styles */
@@ -421,7 +322,7 @@
     /* Responsive for small devices */
     @media (max-width: 768px) {
       body {
-        font-size: 15px;
+        font-size: 14px;
       }
 
       header {
@@ -434,11 +335,11 @@
       }
 
       header h1 {
-        font-size: 2.2rem;
+        font-size: 2rem;
       }
 
       header p {
-        font-size: 1.3rem;
+        font-size: 1.1rem;
       }
 
       .container {
@@ -446,11 +347,11 @@
       }
 
       .section-card {
-        padding: 1.8rem;
+        padding: 1.5rem;
       }
 
       h2 {
-        font-size: 1.4rem;
+        font-size: 1.2rem;
       }
 
       .contact-grid {
@@ -460,7 +361,7 @@
 
     @media (max-width: 480px) {
       body {
-        font-size: 14px;
+        font-size: 13px;
       }
 
       .profile-image-container {
@@ -469,19 +370,19 @@
       }
 
       header h1 {
-        font-size: 2rem;
+        font-size: 1.8rem;
       }
 
       header p {
-        font-size: 1.1rem;
+        font-size: 1rem;
       }
 
       .section-card {
-        padding: 1.5rem;
+        padding: 1.2rem;
       }
 
       h2 {
-        font-size: 1.3rem;
+        font-size: 1.1rem;
       }
     }
   </style>
@@ -501,26 +402,22 @@
       <div class="profile-text">
         <h1>Abdelmageed Ahmed Babiker</h1>
         <p>HSE Supervisor | Mining Operations Specialist</p>
-        <p class="tagline">Dedicated to ensuring workplace safety and operational excellence in mining environments</p>
       </div>
     </div>
   </header>
 
   <div class="container">
     <div class="section-card">
-      <h2><i class="fas fa-user"></i> Professional Profile</h2>
+      <h2><i class="fas fa-user"></i> Profile</h2>
       <div class="section">
         <p>
           Motivated and detail-oriented HSE Supervisor with over 1.5 years of experience in mining operations. Proven ability to implement safety policies, conduct rigorous risk assessments, deliver impactful Toolbox Talks and ensure strict compliance with environmental and occupational health standards.
-        </p>
-        <p>
-          Passionate about creating safer work environments through proactive measures and continuous improvement initiatives. Committed to fostering a culture of safety awareness and accountability across all organizational levels.
         </p>
       </div>
     </div>
 
     <div class="section-card">
-      <h2><i class="fas fa-address-book"></i> Contact & Professional Links</h2>
+      <h2><i class="fas fa-address-book"></i> Contact & Links</h2>
       <div class="contact-grid">
         <div class="contact-item">
           <i class="fas fa-envelope"></i>
@@ -546,9 +443,9 @@
     </div>
 
     <div class="section-card">
-      <h2><i class="fas fa-briefcase"></i> Professional Experience</h2>
+      <h2><i class="fas fa-briefcase"></i> Work Experience</h2>
       <div class="section">
-        <strong>HSE Supervisor <span class="badge">Current</span></strong>
+        <strong>HSE Supervisor</strong>
         <p>Red Rock Mining</p>
         <p class="muted">Nile River State, Sudan | June 2024 – Present</p>
         <ul>
@@ -575,9 +472,6 @@
         <span class="skill-tag">ISO 45001</span>
         <span class="skill-tag">ISO 14001</span>
         <span class="skill-tag">HSE Reporting</span>
-        <span class="skill-tag">Emergency Response</span>
-        <span class="skill-tag">Safety Training</span>
-        <span class="skill-tag">Compliance Monitoring</span>
       </div>
     </div>
 
@@ -587,9 +481,6 @@
         <strong>Bachelor of Mechanical Engineering</strong>
         <p>Omdurman Islamic University, Sudan</p>
         <p class="muted">Expected Graduation: June 2026</p>
-        <div class="progress-bar">
-          <div class="progress" id="educationProgress"></div>
-        </div>
       </div>
     </div>
 
@@ -597,9 +488,9 @@
       <h2><i class="fas fa-certificate"></i> Certifications & Training</h2>
       <div class="section">
         <ul>
-          <li><strong>IOSH Managing Safely</strong> <span class="badge">Professional</span></li>
-          <li>First Aid Training <span class="badge">Certified</span></li>
-          <li>Firefighting Training <span class="badge">Certified</span></li>
+          <li><strong>IOSH Managing Safely</strong></li>
+          <li>First Aid Training</li>
+          <li>Firefighting Training</li>
         </ul>
       </div>
     </div>
@@ -635,24 +526,6 @@
         themeIcon.className = 'fas fa-moon';
       }
     }
-
-    // Animate progress bar for education
-    document.addEventListener('DOMContentLoaded', function() {
-      const progressBar = document.getElementById('educationProgress');
-      // Assuming current year is 2025 and graduation is 2026
-      const currentYear = 2025;
-      const startYear = 2022; // Assuming 4-year program starting in 2022
-      const graduationYear = 2026;
-      
-      const totalYears = graduationYear - startYear;
-      const yearsCompleted = currentYear - startYear;
-      const progressPercentage = (yearsCompleted / totalYears) * 100;
-      
-      // Set the progress after a small delay for visual effect
-      setTimeout(() => {
-        progressBar.style.width = `${progressPercentage}%`;
-      }, 500);
-    });
   </script>
 </body>
-</html>
+    </html>
