--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         <!-- صور للوظيفة -->
         <div class="work-images">
           <h4>Work Images</h4>
-          <div class="image-gallery">
+          <div class="pictures/IMG_20251016_200552.jpg">
             <div class="image-placeholder">
               <i class="fas fa-image"></i>
               <span>Image 1 - Site Safety Inspection</span>
