Refactor image section in index.html

--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@
         <!-- صور للوظيفة -->
         <div class="work-images">
           <h4>Work Images</h4>
-          <div class="pictures/IMG_20251016_200552.jpg">
-            <div class="image-placeholder">
+          <div class="image-gallery">
+            <div class="pictures/IMG_20251016_200552.jpg">
               <i class="fas fa-image"></i>
               <span>Image 1 - Site Safety Inspection</span>
             </div>
