Update image description in index.html

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
           <div class="image-gallery">
             <div class="pictures/IMG_20251016_200552.jpg">
               <i class="fas fa-image"></i>
-              <span>Image 1 - Site Safety Inspection</span>
+              <span>pictures/IMG_20251016_200552.jpg</span>
             </div>
             <div class="image-placeholder">
               <i class="fas fa-image"></i>
