--- a/index.html
+++ b/index.html
@@ -694,10 +694,10 @@
             <div class="thumbnail" onclick="openLightbox('pictures/IMG_20251016_200552.jpg')">
               <img src="pictures/IMG_20251016_200552.jpg" alt="HSE Image 1" onerror="this.src='https://images.unsplash.com/photo-1581094794329-c8112a89af12?ixlib=rb-4.0.3&auto=format&fit=crop&w=400&q=80'; this.onerror=null;">
             </div>
-            <div class="thumbnail" onclick="openLightbox('pictures/hse2.jpg')">
+            <div class="thumbnail" onclick="openLightbox('pictures/IMG-20251001-WA0009~3.jpg')">
               <img src="pictures/hse2.jpg" alt="HSE Image 2" onerror="this.src='https://images.unsplash.com/photo-1563013544-824ae1b704d3?ixlib=rb-4.0.3&auto=format&fit=crop&w=400&q=80'; this.onerror=null;">
             </div>
-            <div class="thumbnail" onclick="openLightbox('pictures/hse3.jpg')">
+            <div class="thumbnail" onclick="openLightbox('pictures/PSX_20250905_045953.jpg')">
               <img src="pictures/hse3.jpg" alt="HSE Image 3" onerror="this.src='https://images.unsplash.com/photo-1542744095-fcf48d80b0fd?ixlib=rb-4.0.3&auto=format&fit=crop&w=400&q=80'; this.onerror=null;">
             </div>
           </div>
@@ -723,13 +723,13 @@
         <div class="work-images">
           <p><em>Work Images:</em></p>
           <div class="image-gallery">
-            <div class="thumbnail" onclick="openLightbox('pictures/mech1.jpg')">
+            <div class="thumbnail" onclick="openLightbox('pictures/IMG_20220322_073737_049.jpg')">
               <img src="pictures/mech1.jpg" alt="Mechanical 1" onerror="this.src='https://images.unsplash.com/photo-1581094794329-c8112a89af12?ixlib=rb-4.0.3&auto=format&fit=crop&w=400&q=80'; this.onerror=null;">
             </div>
-            <div class="thumbnail" onclick="openLightbox('pictures/mech2.jpg')">
+            <div class="thumbnail" onclick="openLightbox('pictures/IMG_20220302_122120_663.jpg')">
               <img src="pictures/mech2.jpg" alt="Mechanical 2" onerror="this.src='https://images.unsplash.com/photo-1563013544-824ae1b704d3?ixlib=rb-4.0.3&auto=format&fit=crop&w=400&q=80'; this.onerror=null;">
             </div>
-            <div class="thumbnail" onclick="openLightbox('pictures/mech3.jpg')">
+            <div class="thumbnail" onclick="openLightbox('pictures/IMG_20220227_082733_920.jpg')">
               <img src="pictures/mech3.jpg" alt="Mechanical 3" onerror="this.src='https://images.unsplash.com/photo-1542744095-fcf48d80b0fd?ixlib=rb-4.0.3&auto=format&fit=crop&w=400&q=80'; this.onerror=null;">
             </div>
           </div>
@@ -758,13 +758,13 @@
         <div class="work-images">
           <p><em>Work Images:</em></p>
           <div class="image-gallery">
-            <div class="thumbnail" onclick="openLightbox('pictures/cashier1.jpg')">
+            <div class="thumbnail" onclick="openLightbox('pictures/IMG_20220416_191139_992.jpg')">
               <img src="pictures/cashier1.jpg" alt="Cashier 1" onerror="this.src='https://images.unsplash.com/photo-1581094794329-c8112a89af12?ixlib=rb-4.0.3&auto=format&fit=crop&w=400&q=80'; this.onerror=null;">
             </div>
-            <div class="thumbnail" onclick="openLightbox('pictures/cashier2.jpg')">
+            <div class="thumbnail" onclick="openLightbox('pictures/IMG_20220127_080801_657.jpg')">
               <img src="pictures/cashier2.jpg" alt="Cashier 2" onerror="this.src='https://images.unsplash.com/photo-1563013544-824ae1b704d3?ixlib=rb-4.0.3&auto=format&fit=crop&w=400&q=80'; this.onerror=null;">
             </div>
-            <div class="thumbnail" onclick="openLightbox('pictures/cashier3.jpg')">
+            <div class="thumbnail" onclick="openLightbox('pictures/IMG_20220416_190328_616.jpg')">
               <img src="pictures/cashier3.jpg" alt="Cashier 3" onerror="this.src='https://images.unsplash.com/photo-1542744095-fcf48d80b0fd?ixlib=rb-4.0.3&auto=format&fit=crop&w=400&q=80'; this.onerror=null;">
             </div>
           </div>
