Modify job titles and fix HTML formatting
Updated job titles and company information. Corrected HTML structure and improved text formatting.

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="utf-8" />
@@ -106,7 +106,7 @@
 
     .profile-image-container:hover {
       transform: scale(1.08);
-      box-shadow: 0 15px 30px rgba(0, 0, 0, 0.3);
+      box-shadow: 0 15px 30px pKgba(0, 0, 0, 0.3);
     }
 
     .profile-image {
@@ -631,7 +631,7 @@
       </div>
       <div class="profile-text">
         <h1>Abdelmageed Ahmed Babiker</h1>
-        <p class="job-title">HSE Supervisor | Mining Operations Specialist</p>
+        <p class="job-title">Automation Engineer | HSE Supervisor </p>
         <p class="location">Khartoum, Sudan</p>
         <div class="social-links">
           <a href="mailto:Abdelmageedahmedsco@gmail.com">
@@ -659,9 +659,9 @@
     <div class="section-card">
       <h2><i class="fas fa-user"></i> Profile</h2>
       <div class="section">
-        <p>Mechanical Engineer specializing in Industrial Automation.</p>
-        <p>Experienced HSE Supervisor with a strong foundation in industrial standards, operational reliability, and risk management.</p>
-        <p>I integrate safety-focused practices into designing and implementing reliable and efficient control systems, including PLC, SCADA, and HMI. My work bridges engineering innovation with advanced safety principles to ensure secure and intelligent industrial processes.</p>
+        <p>Mechanical Engineer specializing in Industrial Automation.
+         Experienced HSE Supervisor with a strong foundation in industrial standards, operational reliability, and risk management.
+         I integrate safety-focused practices into designing and implementing reliable and efficient control systems, including PLC, SCADA, and HMI. My work bridges engineering innovation with advanced safety principles to ensure secure and intelligent industrial processes.</p>
       </div>
     </div>
 
@@ -672,7 +672,7 @@
         <strong>HSE Supervisor</strong>
         <span class="job-type">Full Time Job</span>
         <p class="company-info">Red Rock Mining</p>
-        <a href="https://www.redrockmining.com" target="_blank" class="company-link">
+        <a href="https://www.redrockmining.co" target="_blank" class="company-link">
           <i class="fas fa-external-link-alt"></i> Visit Company Website
         </a>
         <p class="date-location">Nile River State, Sudan | June 2024 – Present</p>
@@ -709,11 +709,11 @@
       <div class="section">
         <strong>Mechanical Engineer Trainee</strong>
         <span class="job-type">Internship</span>
-        <p class="company-info">To be specified</p>
-        <a href="#" class="company-link" style="opacity: 0.7; cursor: default;">
-          <i class="fas fa-external-link-alt"></i> Website not available
+        <p class="company-info">Albarajoub Company Ltd</p>
+        <a href="https://albarajoub.albarajoubarajoub" class="company-link" style="opacity: 0.7; cursor: default;">
+          <i class="fas fa-external-link-alt"></i>  Visit Company Website
         </a>
-        <p class="date-location">Sudan | 2023</p>
+        <p class="date-location">Khartoum,Sudan | March 2022 - April 2022</p>
         
         <ul>
           <li>Corrective Maintenance.</li>
@@ -741,11 +741,11 @@
       <div class="section">
         <strong>Cashier</strong>
         <span class="job-type">Part Time Job</span>
-        <p class="company-info">Retail Store</p>
-        <a href="https://www.example-retail.com" target="_blank" class="company-link">
-          <i class="fas fa-external-link-alt"></i> Example Retail Website
+        <p class="company-info">Alzytoona Shipping Center</p>
+        <a href="https://www.facebook.com/share/1AcazsFF2n/">
+          <i class="fas fa-external-link-alt"></i> Facebook Page
         </a>
-        <p class="date-location">Khartoum, Sudan | 2022 - 2023</p>
+        <p class="date-location">Khartoum, Sudan | April 2021 - February 2022 | May 2022 - April 2023</pp
         
         <ul>
           <li>Managing time and tasks efficiently</li>
@@ -790,7 +790,7 @@
       <div class="section">
         <div class="certification-item">
           <strong>IOSH Managing Safely</strong>
-          <p class="issuer">Institution of Occupational Safety and Health</p>
+          <p class="issuer">Ilex-wution of Occupational Safety and Health</p>
           <a href="#" class="cert-link">
             <i class="fas fa-external-link-alt"></i> View Certificate
           </a>
