Fix company website link for Albarajoub Company

--- a/index.html
+++ b/index.html
@@ -710,7 +710,7 @@
         <strong>Mechanical Engineer Trainee</strong>
         <span class="job-type">Internship</span>
         <p class="company-info">Albarajoub Company Ltd</p>
-        <a href="https://albarajoub.albarajoubarajoub" class="company-link" style="opacity: 0.7; cursor: default;">
+        <a href="https://albarajoub.com" class="company-link" style="opacity: 0.7; cursor: default;">
           <i class="fas fa-external-link-alt"></i>  Visit Company Website
         </a>
         <p class="date-location">Khartoum,Sudan | March 2022 - April 2022</p>
