Refactor profile description into separate paragraphs
Split the profile description into multiple paragraphs for better readability.

--- a/index.html
+++ b/index.html
@@ -659,9 +659,9 @@
     <div class="section-card">
       <h2><i class="fas fa-user"></i> Profile</h2>
       <div class="section">
-        <p>Mechanical Engineer specializing in Industrial Automation.
-         Experienced HSE Supervisor with a strong foundation in industrial standards, operational reliability, and risk management.
-         I integrate safety-focused practices into designing and implementing reliable and efficient control systems, including PLC, SCADA, and HMI. My work bridges engineering innovation with advanced safety principles to ensure secure and intelligent industrial processes.</p>
+        <p>Mechanical Engineer specializing in Industrial Automation.</p>
+         <p>Experienced HSE Supervisor with a strong foundation in industrial standards, operational reliability, and risk management.</p>
+         <p>I integrate safety focused practices into designing and implementing reliable and efficient control systems, including PLC, SCADA, and HMI. My work bridges engineering innovation with advanced safety principles to ensure secure and intelligent industrial processes.</p>
       </div>
     </div>
 
